# noarr-structures

./: README.md
.github/workflows/: noarr_matrix_example_test_macos_14.yml  noarr_matrix_example_test_ubuntu_22.yml  noarr_test_macos_14.yml  noarr_test_ubuntu_22.yml
docs/: DefiningStructures.md  DimensionKinds.md  Glossary.md  Signature.md
docs/structs/: README.md  cuda_striped.md  into_blocks.md  join.md  merge_zcurve.md  reverse.md  span.md  step.md
include/noarr/: structures_extended.hpp
include/noarr/structures/base/: contain.hpp  mu.hpp  signature.hpp  state.hpp  structs_common.hpp  utility.hpp
include/noarr/structures/extra/: funcs.hpp  mangle.hpp  planner.hpp  shortcuts.hpp  sig_utils.hpp  struct_concepts.hpp  struct_traits.hpp  to_struct.hpp  traverser.hpp
include/noarr/structures/interop/: bag.hpp  cuda_striped.cuh  cuda_traverser.cuh  omp.hpp  planner_iter.hpp  tbb.hpp  traverser_iter.hpp
include/noarr/structures/introspection/: contiguous.hpp  lower_bound_along.hpp  offset_along.hpp  stride_along.hpp  uniform_along.hpp
include/noarr/structures/structs/: bcast.hpp  blocks.hpp  layouts.hpp  padding.hpp  scalar.hpp  setters.hpp  slice.hpp  views.hpp  zcurve.hpp
tests/: CMakeLists.txt  algebra_test.cpp  blocks_static_test.cpp  mangle_test.cpp  padding_test.cpp  planner_test.cpp  reassemble_test.cpp  rename_test.cpp  reverse_test.cpp  state_test.cpp  step_test.cpp  trans_test.cxx  traverser_test.cpp
